apps/student-reg/k8s/overlays/dev/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-reg-dev
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
