apps/student-reg/k8s/overlays/dev/patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  template:
    metadata:
      labels:
        app: postgres
        component: database
        environment: dev
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: student-reg-dev
        app.kubernetes.io/part-of: student-reg
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
