apps/student-reg/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-reg
  namespace: student-reg-dev
spec:
  ingressClassName: nginx
  rules:
  - host: student-reg-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-reg
            port:
              number: 80
